--- a/public/css/building_manager.css
+++ b/public/css/building_manager.css
@@ -1,7 +1,15 @@
 /* Styles pour la vue Building Manager */
 h1 {
+    font-size: 50px;
+    text-shadow: -1px -1px #eee, 1px 1px #888, -3px 0 4px #000;
+    font-family: 'Segoe print', Arial, Helvetica, sans-serif;
+    color: #ccc;
+    margin: 30%;
+    letter-spacing: 0.2rem;
+    font-weight: lighter;
     text-align: center;
-    margin: 20px;
+    display: inline;
+    line-height: 150px;
 }
 
 .filters {
