--- a/templates/partials/_navbar.html.twig
+++ b/templates/partials/_navbar.html.twig
@@ -1,9 +1,11 @@
 {% block stylesheets %}
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.3.2/css/bootstrap.min.css" integrity="sha512-DsK8uO7V1wE4y4qV4e9mPoh69aFvLmxZJ7rlFNtk8ODjrWV7w1cLuZh98VNG4+J9KjVtgyFNkrZIY+89SdC8nQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-<!-- JS de Bootstrap (nécessite jQuery) -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-c7o6uJmiEjLIX+Pj0zZAdmXiR2RmB8XZ5nfD6tKjZu3qZ5JhEX9vHfnSH6YJQ6Z1lBQBx8JjHvDyddtBp18+3A==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.3.2/js/bootstrap.min.js" integrity="sha512-YVtqW4Cw4V7/Bu1yUEfVzJW1IDvL+7e+kZjNpVd0F8aM+Pf/2z2tuT1FrIje9BJc13a+uZ/hJLuFnEhLzD8HOw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-<link rel="stylesheet" href="{{ asset('css/nav.css') }}" />
+{# <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.3.2/css/bootstrap.min.css" integrity="sha512-DsK8uO7V1wE4y4qV4e9mPoh69aFvLmxZJ7rlFNtk8ODjrWV7w1cLuZh98VNG4+J9KjVtgyFNkrZIY+89SdC8nQ==" crossorigin="anonymous" referrerpolicy="no-referrer" /> #}
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+    crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="{{ asset('css/nav.css') }}" />
 {% endblock %}
 {% block navbar %}
     <nav role="navigation">
@@ -14,7 +16,7 @@
             <span></span>
             <ul id="menu">
                 {% if app.user and 'ROLE_LOREAL' in app.user.roles %}
-                <li><a href="{{path('app_calendar')}}">Planning</a></li>
+                {# <li><a href="{{path('app_calendar')}}">Planning</a></li> #}
                 <li><a href="{{path('app_loreal')}}">Planning Détaillé</a></li>
                 {% endif%}
                 {% if app.user and 'ROLE_ADMIN' in app.user.roles %}
@@ -40,6 +42,7 @@
                 </li>
                 <li><a href="/calendar/building/manager">Planning quais</a></li>
                 <li><a href="{{path('app_driver')}}">Planning caristes</a></li>
+                <li><a href="{{path('app_statistics')}}">Statistiques</a></li>
                 <li><a href="{{path('admin')}}">Configuration</a></li>
 
                 {% endif%}
@@ -58,3 +61,11 @@
         </div>
     </nav>
 {% endblock navbar %}
+{% block javascipts%}
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
+    integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
+    crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
+    integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
+    crossorigin="anonymous"></script>
+{% endblock %}
